# taegel

./: .buildinfo  .gitignore  LICENCE  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  taegel.controllers.html  taegel.html  taegel.models.html  taegel.views.html  tests.html
.github/workflows/: sphinx_docs_to_gh_pages.yaml
_sources/: index.rst.txt  modules.rst.txt  taegel.controllers.rst.txt  taegel.models.rst.txt  taegel.rst.txt  taegel.views.rst.txt  tests.rst.txt
controllers/: __init__.py  filesystem.py  parallel.py  validate.py  youtube.py
docs/: Makefile  conf.py  index.rst  taegel.controllers.rst  taegel.models.rst
models/: __init__.py  arguments.py
taegel/: app.py
taegel/controllers/: __init__.py  data.py  filesystem.py  parallel.py  validate.py  youtube.py
taegel/models/: __init__.py  arguments.py  objects.py  regex.py  types.py
taegel/views/: __init__.py  log.py  out.py  progress.py
tests/: __init__.py  test_taegel.py
tests/controllers/: test_parallel.py  test_youtube.py
views/: __init__.py  out.py  progress.py
