[tool.poetry]
name = "taegel"
version = "0.1.0"
description = ""
authors = ["Kevin Marques <kevinmarqueskmp@gmail.com>"]

[[tool.poetry.source]]
name = 'aliyun.mirrors'
url = 'https://mirrors.aliyun.com/pypi/simple/'
default = true 

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.1.0"
pytube = "^12.1.2"
sphinx-rtd-theme = "^1.1.1"
sphinxcontrib-napoleon = "^0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
taegel = "taegel.app:run"
